--- a/src/css/_functions/_px-to-em.scss
+++ b/src/css/_functions/_px-to-em.scss
@@ -3,7 +3,7 @@
 // @usage: em(24px, .875em) => 1.71429em
 //         em(24px, 16px) => 1,5em
 @function em($value: 14px, $default: 1em, $body: 16px) {
-    @if (unit($default) == "em") {
+    @if (math.unit($default) == "em") {
         $default: parse-int($default) * $body;
     }
 
