--- a/src/css/_functions/_px-to-rem.scss
+++ b/src/css/_functions/_px-to-rem.scss
@@ -3,7 +3,7 @@
 // @usage: rem(24px, .875rem) => 1.71429rem
 //         rem(24px, 16px) => 1,5rem
 @function rem($value: 14px, $default: 1rem, $body: 16px) {
-    @if (unit($default) == "rem") {
+    @if (math.unit($default) == "rem") {
         $default: parse-int($default) * $body;
     }
 
